--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="col-md-2 text-center">
         <h4>Bonjun <br/> Gu</h4>
         <div class="featurette-item">
-           <i><img class="img-circle grayscale mini" src="Bj_image.jpg"></i>
+           <i><img class="img-circle grayscale mini" src="BJ_image.jpg"></i>
            <h5>Intern </h5>
            <h6> A wonderful coffee Boy </h6>   
         </div>
