Bj have a new title

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <h4>Bonjun <br/> Gu</h4>
         <div class="featurette-item">
            <i><img class="img-circle grayscale mini" src="BJ_image.jpg"></i>
-           <h5>Intern </h5>
-           <h6> A wonderful coffee Boy </h6>   
+           <h5> Programer : </h5>
+           <h6>Crazy like an cat running after a lazer light !</h6>   
         </div>
       </div>
     </div>
@@ -144,13 +144,6 @@
           <br/>
         </p>
         <p class = "lead"> How our group works : We divided the work and we made every certain time in the week a group meeting to check all the things we have made and support and pop up new ideas for each part. Specifically, Leo is in charge of the group website, uploading and containing it with all the informations needed for different deadlines and also help for coding. Cyprien is a principal programmer. Bonjun help in both areas in different parts of Shar’it and the team webpage. Franco, last but not least, is in charge of the design of the app, helping Cyprien in the programming and also in charge of all the relations of the interface with the user and design.         
-        </p>
-        <p class = "lead">
-          
-        </p>
-
-        <p class = "lead">
-        
         </p>
         <p class="text-center"><img class="miniDiagram" src="UML_Diagram_SHARIT.png"/></p>
         <br/><br/>
@@ -179,12 +172,13 @@
   </div>
 </div>
 
-<div class="blurb" id="sec4">
+
+<div class="blurb" id="sec5">
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <h1>Mobile-first</h1>
-        <img src="/assets/example/bg_smartphones.jpg" class="img-responsive">
+        <h1>Improvements</h1>
+        <p> 
       </div>
     </div>
   </div>
